--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,17 @@ android {
         }
     }
 }
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:palette-v7:22.2.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.github.chrisbanes.photoview:library:+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+   // compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
 }
+
