--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
    // compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.android.support:cardview-v7:21.0.+'
    // compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'org.apmem.tools:layouts:1.10@aar'
 }
 
