--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ImageActivity"
-            >
+            android:name=".activities.ImageActivity">
         </activity>
+
     </application>
 
 </manifest>
