--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
    // compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'org.apmem.tools:layouts:1.10@aar'
+    compile 'com.android.support:support-v4:20.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.daimajia.androidanimations:library:1.1.2@aar'
+    compile 'com.nineoldandroids:library:2.4.+'
 }
 
