--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     compile 'com.android.support:support-v4:20.+'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'com.daimajia.androidanimations:library:1.1.2@aar'
-    compile 'com.nineoldandroids:library:2.4.+'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 
