add button edit and change button delete on menu bookmark ,work mode edit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.example.anastasiyaverenich.vkrecipes"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
@@ -17,10 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
+}
+
+repositories {
+    mavenCentral()
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
