--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.anastasiyaverenich.vkrecipes" >
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.anastasiyaverenich.vkrecipes">
     <!-- Include following permission if you want to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-sdk tools:overrideLibrary="org.lucasr.twowayview, org.lucasr.twowayview.widget" />
 
     <application
+
         android:name=".application.VkRApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Recipes"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        tools:replace="android:label,android:icon">
         <activity
             android:name=".activities.MainActivity"
             android:label="Recipes">
