--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,28 +15,45 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
     }
-}
 
-repositories {
-    mavenCentral()
-}
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    //compile 'com.nispok:snackbar:2.11.+'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.android.support:palette-v7:22.2.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
-    compile 'com.github.chrisbanes.photoview:library:1.2.4'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'org.apmem.tools:layouts:1.10@aar'
-    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
-    compile 'com.daimajia.androidanimations:library:1.1.2@aar'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-}
+        productFlavors {
+            vkrecipes {
+                applicationId "com.example.anastasiyaverenich.vkrecipes"
+                //buildConfigField "boolean" "vkrecipes"  "true"
+                versionName "1.0-recipes"
+            }
+            vkpsyhology {
+                applicationId "com.example.anastasiyaverenich.vkpsyhology"
+               // buildConfigField 'String', 'FLAVOR', '"vkpsyhology"'
+                versionName "1.0-psyhology"
+
+            }
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        compile 'com.android.support:appcompat-v7:22.2.0'
+        compile 'com.android.support:design:22.2.0'
+        //compile 'com.nispok:snackbar:2.11.+'
+        compile 'com.squareup.retrofit:retrofit:1.9.0'
+        compile 'com.android.support:palette-v7:22.2.0'
+        compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+        compile 'com.github.chrisbanes.photoview:library:1.2.4'
+        compile 'com.android.support:cardview-v7:22.2.0'
+        compile 'com.android.support:recyclerview-v7:22.2.0'
+        compile 'org.apmem.tools:layouts:1.10@aar'
+        compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+        compile 'com.daimajia.androidanimations:library:1.1.2@aar'
+        compile 'com.nineoldandroids:library:2.4.0'
+        compile 'com.jakewharton:butterknife:7.0.1'
+        compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+    }
 
