--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,16 @@
     <uses-sdk tools:overrideLibrary="org.lucasr.twowayview, org.lucasr.twowayview.widget" />
 
     <application
-
         android:name=".application.VkRApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Recipes"
+        android:label="@string/label_name"
         android:theme="@style/AppTheme"
         android:supportsRtl="true"
         tools:replace="android:label,android:icon">
         <activity
             android:name=".activities.MainActivity"
-            android:label="Recipes">
+            android:label="@string/label_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
