--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
         compile fileTree(include: ['*.jar'], dir: 'libs')
         compile 'com.android.support:appcompat-v7:22.2.0'
         compile 'com.android.support:design:22.2.0'
+        compile 'com.mikhaellopez:hfrecyclerview:1.0.0'
         //compile 'com.nispok:snackbar:2.11.+'
         compile 'com.squareup.retrofit:retrofit:1.9.0'
         compile 'com.android.support:palette-v7:22.2.0'
