--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion '22.0.0'
 
     defaultConfig {
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -40,21 +41,22 @@ android {
     }
     dependencies {
         compile fileTree(include: ['*.jar'], dir: 'libs')
-        compile 'com.android.support:appcompat-v7:22.2.0'
-        compile 'com.android.support:design:22.2.0'
+        //compile 'com.android.support:appcompat-v7:23.2.0'
+        compile 'com.android.support:design:23.1.1'
         compile 'com.mikhaellopez:hfrecyclerview:1.0.0'
         //compile 'com.nispok:snackbar:2.11.+'
         compile 'com.squareup.retrofit:retrofit:1.9.0'
-        compile 'com.android.support:palette-v7:22.2.0'
+        compile 'com.android.support:palette-v7:23.2.0'
         compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
         compile 'com.github.chrisbanes.photoview:library:1.2.4'
-        compile 'com.android.support:cardview-v7:22.2.0'
-        compile 'com.android.support:recyclerview-v7:22.2.0'
+        compile 'com.android.support:cardview-v7:23.2.0'
+        compile 'com.android.support:recyclerview-v7:23.2.0'
         compile 'org.apmem.tools:layouts:1.10@aar'
         compile 'com.daimajia.swipelayout:library:1.2.0@aar'
         compile 'com.daimajia.androidanimations:library:1.1.2@aar'
         compile 'com.nineoldandroids:library:2.4.0'
         compile 'com.jakewharton:butterknife:7.0.1'
         compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+        compile 'jp.wasabeef:recyclerview-animators:1.0.3@aar'
     }
 
