--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,6 @@ android {
         compile 'com.nineoldandroids:library:2.4.0'
         compile 'com.jakewharton:butterknife:7.0.1'
         compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-        compile 'jp.wasabeef:recyclerview-animators:1.0.3@aar'
+        compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     }
 
