--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,19 @@ android {
     buildToolsVersion '22.0.0'
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
 
+
+
+
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
@@ -21,42 +25,42 @@ android {
         }
     }
 
-        productFlavors {
-            vkrecipes {
-                applicationId "com.example.anastasiyaverenich.vkrecipes"
-                //buildConfigField "boolean" "vkrecipes"  "true"
-                versionName "1.0-recipes"
-            }
-            vkpsyhology {
-                applicationId "com.example.anastasiyaverenich.vkpsyhology"
-               // buildConfigField 'String', 'FLAVOR', '"vkpsyhology"'
-                versionName "1.0-psyhology"
+    productFlavors {
+        vkrecipes {
+            applicationId "com.example.anastasiyaverenich.vkrecipes"
+            //versionName "1.0-recipes"
+            //buildConfigField 'String', 'FLAVOR', '"vkrecipes"'
 
-            }
+        }
+        vkpsyhology {
+            applicationId "com.example.anastasiyaverenich.vkpsyhology"
+            //buildConfigField 'String', 'FLAVOR', '"vkpsyhology"'
+
         }
     }
+}
 
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        //compile 'com.android.support:appcompat-v7:23.2.0'
-        compile 'com.android.support:design:23.1.1'
-        compile 'com.mikhaellopez:hfrecyclerview:1.0.0'
-        //compile 'com.nispok:snackbar:2.11.+'
-        compile 'com.squareup.retrofit:retrofit:1.9.0'
-        compile 'com.android.support:palette-v7:23.2.0'
-        compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
-        compile 'com.github.chrisbanes.photoview:library:1.2.4'
-        compile 'com.android.support:cardview-v7:23.2.0'
-        compile 'com.android.support:recyclerview-v7:23.2.0'
-        compile 'org.apmem.tools:layouts:1.10@aar'
-        compile 'com.daimajia.swipelayout:library:1.2.0@aar'
-        compile 'com.daimajia.androidanimations:library:1.1.2@aar'
-        compile 'com.nineoldandroids:library:2.4.0'
-        compile 'com.jakewharton:butterknife:7.0.1'
-        compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-        compile 'jp.wasabeef:recyclerview-animators:2.2.0'
-    }
-
+repositories {
+    mavenCentral()
+}
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.mikhaellopez:hfrecyclerview:1.0.0'
+    //compile 'com.nispok:snackbar:2.11.+'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:palette-v7:23.2.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'org.apmem.tools:layouts:1.10@aar'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.2@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+}
