--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -10,9 +11,6 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
-
-
 
     buildTypes {
         release {
@@ -62,5 +60,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
 }
