--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,9 @@ repositories {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    //compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.mikhaellopez:hfrecyclerview:1.0.0'
-    //compile 'com.nispok:snackbar:2.11.+'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.android.support:palette-v7:23.2.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.android.support:cardview-v7:23.2.0'
@@ -56,9 +53,7 @@ dependencies {
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'com.daimajia.androidanimations:library:1.1.2@aar'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile 'com.google.android.gms:play-services-ads:7.3.0'
+    compile 'com.google.android.gms:play-services-analytics:7.3.0'
 }
