--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,13 @@
     <application
         android:name=".application.VkRApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/icon"
+
         android:label="@string/label_name"
         android:theme="@style/AppTheme"
         android:supportsRtl="true"
+        android:icon="@mipmap/ic_launcher"
         tools:replace="android:label,android:icon">
+       // android:icon="@mipmap/ic_launcher"
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/label_name">
@@ -30,6 +32,10 @@
         <activity
             android:name=".activities.ImageActivity">
         </activity>
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
 
     </application>
 
